// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIndemnite 2k, 6ans d'ancienneté, 61ans, cadre, retraite possible 1`] = `
Object {
  "formula": "4/10 * Sref * Dc + 3/10 * Sref * Dt  - \\"minoration\\"",
  "labels": Object {
    "catégorie": "cadre",
    "durée comme TAM, en mois, (Dt)": 12,
    "durée comme cadre, en mois, (Dc)": 60,
    "en age de partir à la retraite": "oui",
    "majoration": 0,
    "minoration": 920,
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 61ans, cadre, retraite possible 1`] = `
Object {
  "formula": "4/10 * Sref * Dc + 3/10 * Sref * Dt",
  "labels": Object {
    "catégorie": "cadre",
    "durée comme cadre, en mois, (Dc)": 120,
    "en age de partir à la retraite": "oui",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 61ans, cadre, retraite possible 2`] = `
Object {
  "formula": "4/10 * Sref * Dc + 3/10 * Sref * Dt  + \\"majoration\\" - \\"minoration\\"",
  "labels": Object {
    "catégorie": "cadre",
    "durée comme TAM, en mois, (Dt)": 5,
    "durée comme cadre, en mois, (Dc)": 120,
    "en age de partir à la retraite": "oui",
    "majoration": 4000,
    "minoration": 6600,
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, 55ans, ouvrier 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "ancienneté totale, en année, (A)": 1,
    "catégorie": "ouvrier",
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 55ans, TAM 1`] = `
Object {
  "formula": "1/10 * Sref * A",
  "labels": Object {
    "ancienneté totale, en année, (A)": 2,
    "bareme": Object {
      "ouvrier": Object {
        "label": "1/10",
        "value": 0.1,
      },
      "tam": Object {
        "label": "1/10",
        "value": 0.1,
      },
    },
    "catégorie": "tam",
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 55ans, cadre 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "ancienneté totale, en année, (A)": 2,
    "catégorie": "cadre",
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 55ans, ouvrier 1`] = `
Object {
  "formula": "1/10 * Sref * A",
  "labels": Object {
    "ancienneté totale, en année, (A)": 2,
    "bareme": Object {
      "ouvrier": Object {
        "label": "1/10",
        "value": 0.1,
      },
      "tam": Object {
        "label": "1/10",
        "value": 0.1,
      },
    },
    "catégorie": "ouvrier",
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 24mois d'ancienneté, 61ans, ouvrier, retraite possible 1`] = `
Object {
  "formula": "1/10 * Sref * A  - \\"minoration\\"",
  "labels": Object {
    "ancienneté totale, en année, (A)": 2,
    "bareme": Object {
      "ouvrier": Object {
        "label": "1/10",
        "value": 0.1,
      },
      "tam": Object {
        "label": "1/10",
        "value": 0.1,
      },
    },
    "catégorie": "ouvrier",
    "en age de partir à la retraite": "oui",
    "majoration": 0,
    "minoration": 80,
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 55ans, TAM 1`] = `
Object {
  "formula": "3/10 * Sref * A",
  "labels": Object {
    "ancienneté totale, en année, (A)": 3,
    "bareme": Object {
      "ouvrier": Object {
        "label": "2/10",
        "value": 0.2,
      },
      "tam": Object {
        "label": "3/10",
        "value": 0.3,
      },
    },
    "catégorie": "tam",
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 55ans, cadre 1`] = `
Object {
  "formula": "4/10 * Sref * Dc + 3/10 * Sref * Dt",
  "labels": Object {
    "catégorie": "cadre",
    "durée comme TAM, en mois, (Dt)": 12,
    "durée comme cadre, en mois, (Dc)": 24,
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 55ans, ouvrier 1`] = `
Object {
  "formula": "2/10 * Sref * A",
  "labels": Object {
    "ancienneté totale, en année, (A)": 3,
    "bareme": Object {
      "ouvrier": Object {
        "label": "2/10",
        "value": 0.2,
      },
      "tam": Object {
        "label": "3/10",
        "value": 0.3,
      },
    },
    "catégorie": "ouvrier",
    "en age de partir à la retraite": "non",
    "salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 36mois d'ancienneté, 61ans, cadre, retraite possible 1`] = `
Object {
  "formula": "4/10 * Sref * Dc + 3/10 * Sref * Dt  - \\"minoration\\"",
  "labels": Object {
    "catégorie": "cadre",
    "durée comme TAM, en mois, (Dt)": 12,
    "durée comme cadre, en mois, (Dc)": 24,
    "en age de partir à la retraite": "oui",
    "majoration": 0,
    "minoration": 440,
    "salaire de référence (Sref)": 2000,
  },
}
`;
